--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,8 +27,8 @@
 
         <form class="login-form" onsubmit="redirectToDashboard(event)">
           <div class="input-group">
-            <label for="companyId">Company ID</label>
-            <input type="text" id="companyId" placeholder="Enter your company ID" required>
+            <label for="email">Company Email</label>
+            <input type="email" id="email" placeholder="Enter your company email" required>
           </div>
 
           <div class="input-group">
