--- a/frontend/html/landing.html
+++ b/frontend/html/landing.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NetPulse - Airport Unified Monitoring</title>
-  <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="../css/landing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <!-- Hero Section -->
   <section class="hero">
-    <img src="../media/landingpage.png" alt="Airport" class="hero-bg">
+    <img src="../media/landingpage.png" alt="Aerial view of Cochin International Airport with runways, terminal buildings, and surrounding greenery under a clear sky, conveying a sense of innovation and connectivity. Text in image reads NetPulse Airport Unified Monitoring and Management System." class="hero-bg">
     <div class="overlay"></div>
     <div class="hero-content">
       <div class="logo-container">
