--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -25,7 +25,7 @@
           <p class="sub-title">Airport Unified Monitoring & Management System</p>
         </div>
 
-        <form class="login-form" onsubmit="redirectToDashboard(event)">
+        <form class="login-form">
           <div class="input-group">
             <label for="email">Company Email</label>
             <input type="email" id="email" placeholder="Enter your company email" required>
@@ -45,6 +45,7 @@
           </div>
 
           <button type="submit" class="login-btn">Login</button>
+          <div id="login-error" style="color:red;"></div>
           <p class="signup-link">
             Don’t have an account?
             <a href="signup.html">Sign up</a>
@@ -58,11 +59,12 @@
       </div>
     </div>
   </div>
+  <script src="../js/login.js"></script>
+  <script>
+    function redirectToDashboard(event) {
+      event.preventDefault();
+      window.location.href = "dashboard.html";
+    }
+  </script>
 </body>
-<script>
-  function redirectToDashboard(event) {
-    event.preventDefault();
-    window.location.href = "dashboard.html";
-  }
-</script>
 </html>
