--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -102,7 +102,7 @@
           </div>
           <div class="notifications">
             <i class="fas fa-bell"></i>
-            <span class="notification-badge">3</span>
+            <span class="notification-badge" id="notification-badge"></span>
           </div>
           <div class="date-display">
             <i class="fas fa-calendar"></i>
@@ -232,6 +232,6 @@
       </section>
     </main>
   </div>
-  <script src="js/dashboard.js"></script>
+  <script src="../js/dashboard.js"></script>
 </body>
 </html>
