--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Hero Section -->
   <section class="hero">
-    <img src="../media/landingpage.png" alt="Aerial view of Cochin International Airport with runways, terminal buildings, and surrounding greenery under a clear sky, conveying a sense of innovation and connectivity. Text in image reads NetPulse Airport Unified Monitoring and Management System." class="hero-bg">
+    <img src="media/landingpage.png" alt="Aerial view of Cochin International Airport with runways, terminal buildings, and surrounding greenery under a clear sky, conveying a sense of innovation and connectivity. Text in image reads NetPulse Airport Unified Monitoring and Management System." class="hero-bg">
     <div class="overlay"></div>
     <div class="hero-content">
       <div class="logo-container">
@@ -39,8 +39,8 @@
     </div>
     <div class="feature">
       <i class="fas fa-shield-alt"></i>
-      <h3>Security Systems</h3>
-      <p>Keep watch on CCTV, fire safety, and access systems.</p>
+      <h3>Error Detection</h3>
+      <p>Identify and report network issues before they impact operations.</p>
     </div>
     <div class="feature">
       <i class="fas fa-brain"></i>
