--- a/frontend/network-devices.html
+++ b/frontend/network-devices.html
@@ -6,6 +6,7 @@
     <title>Network Devices - NetPulse</title>
     <link rel="stylesheet" href="css/network-devices.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="dashboard-container">
@@ -366,71 +367,33 @@
                         <span class="page-number">Page 1 of 3</span>
                         <button class="pagination-btn"><i class="fas fa-chevron-right"></i></button>
                     </div>
-                    <div class="rows-info">Showing 7 of 42 devices</div>
+                    <div class="rows-info">Showing devices</div>
                 </div>
             </section>
 
-            <!-- Bandwidth Chart -->
-            <section class="chart-section">
-                <div class="section-header">
-                    <h3>Bandwidth Usage</h3>
-                    <div class="chart-controls">
-                        <select id="time-range">
-                            <option value="1h">Last 1 Hour</option>
-                            <option value="6h">Last 6 Hours</option>
-                            <option value="12h">Last 12 Hours</option>
-                            <option value="24h" selected>Last 24 Hours</option>
-                            <option value="7d">Last 7 Days</option>
-                        </select>
-                        <select id="device-select">
-                            <option value="all">All Devices</option>
-                            <option value="router-01">Core-Router-01</option>
-                            <option value="switch-t1">Switch-T1-A</option>
-                            <option value="firewall">Firewall-Main</option>
-                        </select>
-                    </div>
-                </div>
+            <!-- Bandwidth Chart - REAL VERSION -->
+<section class="chart-section">
+    <div class="section-header">
+        <h3>Bandwidth Usage</h3>
+        <div class="chart-controls">
+            <select id="time-range">
+                <option value="1h">Last 1 Hour</option>
+                <option value="6h">Last 6 Hours</option>
+                <option value="12h">Last 12 Hours</option>
+                <option value="24h" selected>Last 24 Hours</option>
+                <option value="7d">Last 7 Days</option>
+            </select>
+            <select id="device-select">
+                <option value="all">All Devices</option>
+                <!-- Devices will be populated dynamically -->
+            </select>
+        </div>
+    </div>
 
-                <div class="chart-container">
-                    <div class="chart-placeholder">
-                        <div class="chart-annotation">
-                            <div class="annotation anomaly">
-                                <div class="annotation-marker"></div>
-                                <div class="annotation-text">Anomaly detected</div>
-                            </div>
-                        </div>
-                        <!-- In a real implementation, this would be a Chart.js or similar -->
-                        <div class="mock-chart">
-                            <div class="chart-line">
-                                <div class="data-point" style="left: 5%; height: 30%;"></div>
-                                <div class="data-point" style="left: 15%; height: 45%;"></div>
-                                <div class="data-point" style="left: 25%; height: 60%;"></div>
-                                <div class="data-point" style="left: 35%; height: 55%;"></div>
-                                <div class="data-point" style="left: 45%; height: 70%;"></div>
-                                <div class="data-point anomaly-point" style="left: 55%; height: 90%;"></div>
-                                <div class="data-point" style="left: 65%; height: 65%;"></div>
-                                <div class="data-point" style="left: 75%; height: 50%;"></div>
-                                <div class="data-point" style="left: 85%; height: 40%;"></div>
-                                <div class="data-point" style="left: 95%; height: 35%;"></div>
-                            </div>
-                            <div class="chart-x-axis">
-                                <span>00:00</span>
-                                <span>06:00</span>
-                                <span>12:00</span>
-                                <span>18:00</span>
-                                <span>23:59</span>
-                            </div>
-                            <div class="chart-y-axis">
-                                <span>0</span>
-                                <span>250</span>
-                                <span>500</span>
-                                <span>750</span>
-                                <span>1000 Mbps</span>
-                            </div>
-                                </div>
-                    </div>
-                </div>
-            </section>
+    <div class="chart-container">
+        <canvas id="bandwidthChart"></canvas>
+    </div>
+</section>
         </main>
     </div>
 
@@ -479,6 +442,7 @@
             </div>
         </div>
     </div>
+
     <script src="js/network-devices.js"></script>
 </body>
 </html>
