--- a/frontend/trends-and-forecasts.html
+++ b/frontend/trends-and-forecasts.html
@@ -6,10 +6,13 @@
   <title>Trends & Forecasts - NetPulse</title>
   <link rel="stylesheet" href="css/trends-and-forecasts.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Add Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 </head>
 <body>
   <div class="dashboard-container">
-    <!-- Sidebar -->
+    <!-- Sidebar (same as your existing code) -->
     <aside class="sidebar">
       <div class="sidebar-header">
         <div class="logo-container">
@@ -40,7 +43,7 @@
       </div>
     </aside>
 
-    <!-- Main -->
+    <!-- Main Content -->
     <main class="main-content">
       <header class="content-header">
         <div class="header-title">
@@ -50,7 +53,7 @@
         <div class="header-actions">
           <div class="search-box">
             <i class="fas fa-search"></i>
-            <input type="text" placeholder="Search metrics...">
+            <input type="text" placeholder="Search metrics..." id="search-metrics">
           </div>
           <div class="notifications">
             <i class="fas fa-bell"></i>
@@ -58,101 +61,205 @@
           </div>
           <div class="date-display">
             <i class="fas fa-calendar"></i>
-            <span>Sept 13, 2023</span>
+            <span id="current-date">Sept 13, 2023</span>
           </div>
         </div>
       </header>
 
-      <!-- Filters -->
+      <!-- Filters Section -->
       <section class="filters-section">
         <div class="filters-header">
-          <h3>Filters</h3>
-          <button class="btn secondary"><i class="fas fa-times"></i> Clear</button>
+          <h3>Analysis Filters</h3>
+          <button class="btn secondary" id="clear-filters"><i class="fas fa-times"></i> Clear Filters</button>
         </div>
         <div class="filters-grid">
           <div class="filter-group">
-            <label for="metric-select">Metric</label>
-            <select id="metric-select">
-              <option value="network">Network Bandwidth</option>
+            <label for="metric-type">Metric Type</label>
+            <select id="metric-type">
+              <option value="bandwidth">Network Bandwidth</option>
+              <option value="cpu">CPU Usage</option>
+              <option value="memory">Memory Usage</option>
               <option value="temperature">Temperature</option>
               <option value="humidity">Humidity</option>
-              <option value="ups">UPS Power</option>
+              <option value="alerts">Alert Trends</option>
             </select>
           </div>
           <div class="filter-group">
-            <label for="range-select">Time Range</label>
-            <select id="range-select">
+            <label for="time-range">Time Range</label>
+            <select id="time-range">
+              <option value="1h">Last 1 Hour</option>
+              <option value="6h">Last 6 Hours</option>
               <option value="24h">Last 24 Hours</option>
               <option value="7d" selected>Last 7 Days</option>
               <option value="30d">Last 30 Days</option>
               <option value="90d">Last 90 Days</option>
             </select>
           </div>
+          <div class="filter-group">
+            <label for="device-select">Device/Zone</label>
+            <select id="device-select">
+              <option value="all">All Devices</option>
+              <option value="Core-Router-01">Core-Router-01</option>
+              <option value="Switch-T1-A">Switch-T1-A</option>
+              <option value="Server-Room-A">Server Room A</option>
+              <option value="Terminal-1">Terminal 1</option>
+            </select>
+          </div>
+          <div class="filter-group">
+            <label for="forecast-period">Forecast Period</label>
+            <select id="forecast-period">
+              <option value="24h">Next 24 Hours</option>
+              <option value="7d" selected>Next 7 Days</option>
+              <option value="30d">Next 30 Days</option>
+            </select>
+          </div>
         </div>
       </section>
 
-      <!-- Trend Chart -->
+      <!-- Main Trends Chart -->
       <section class="trends-section">
         <div class="section-header">
-          <h3><i class="fas fa-chart-line"></i> Trend Analysis</h3>
-          <button class="refresh-btn"><i class="fas fa-sync-alt"></i></button>
+          <h3><i class="fas fa-chart-line"></i> Trend Analysis & Forecast</h3>
+          <div class="chart-controls">
+            <button class="btn secondary" id="export-chart"><i class="fas fa-download"></i> Export</button>
+            <button class="btn primary" id="refresh-chart"><i class="fas fa-sync-alt"></i> Refresh</button>
+          </div>
         </div>
         <div class="chart-container">
           <canvas id="trendChart"></canvas>
         </div>
+        <div class="chart-stats">
+          <div class="stat-card">
+            <span class="stat-label">Current Value</span>
+            <span class="stat-value" id="current-value">--</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-label">Trend</span>
+            <span class="stat-value" id="trend-direction">--</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-label">Peak Value</span>
+            <span class="stat-value" id="peak-value">--</span>
+          </div>
+          <div class="stat-card">
+            <span class="stat-label">Forecast Accuracy</span>
+            <span class="stat-value" id="forecast-accuracy">--</span>
+          </div>
+        </div>
       </section>
 
-      <!-- AI Insight -->
+      <!-- Additional Charts Grid -->
+      <section class="charts-grid">
+        <div class="chart-card">
+          <div class="section-header">
+            <h4><i class="fas fa-network-wired"></i> Bandwidth Comparison</h4>
+            <select class="chart-filter">
+              <option value="devices">By Devices</option>
+              <option value="time">By Time Period</option>
+            </select>
+          </div>
+          <div class="chart-container-small">
+            <canvas id="comparisonChart"></canvas>
+          </div>
+        </div>
+
+        <div class="chart-card">
+          <div class="section-header">
+            <h4><i class="fas fa-exclamation-triangle"></i> Alert Trends</h4>
+            <select class="chart-filter">
+              <option value="severity">By Severity</option>
+              <option value="type">By Type</option>
+            </select>
+          </div>
+          <div class="chart-container-small">
+            <canvas id="alertTrendsChart"></canvas>
+          </div>
+        </div>
+
+        <div class="chart-card">
+          <div class="section-header">
+            <h4><i class="fas fa-thermometer-half"></i> Seasonal Patterns</h4>
+            <select class="chart-filter">
+              <option value="daily">Daily</option>
+              <option value="weekly">Weekly</option>
+            </select>
+          </div>
+          <div class="chart-container-small">
+            <canvas id="seasonalChart"></canvas>
+          </div>
+        </div>
+
+        <div class="chart-card">
+          <div class="section-header">
+            <h4><i class="fas fa-brain"></i> Anomaly Detection</h4>
+            <select class="chart-filter">
+              <option value="recent">Recent</option>
+              <option value="historical">Historical</option>
+            </select>
+          </div>
+          <div class="chart-container-small">
+            <canvas id="anomalyChart"></canvas>
+          </div>
+        </div>
+      </section>
+
+      <!-- AI Insights Section -->
       <section class="ai-insight">
         <div class="section-header">
-          <h3><i class="fas fa-brain"></i> AI Forecast</h3>
-          <button class="refresh-btn"><i class="fas fa-sync-alt"></i></button>
+          <h3><i class="fas fa-brain"></i> AI Forecast & Insights</h3>
+          <button class="refresh-btn" id="refresh-insights"><i class="fas fa-sync-alt"></i> Refresh Insights</button>
         </div>
         <div class="insight-content">
           <div class="insight-icon"><i class="fas fa-lightbulb"></i></div>
           <div class="insight-text">
-            <p>AI predicts rising network traffic during evening peak hours. UPS battery performance shows gradual decline, maintenance may be needed within 2 weeks.</p>
+            <div id="ai-insights">
+              <p>Analyzing historical patterns and current trends...</p>
+            </div>
+            <div class="insight-metrics">
+              <div class="metric-item">
+                <span class="metric-label">Confidence Level:</span>
+                <span class="metric-value high">92%</span>
+              </div>
+              <div class="metric-item">
+                <span class="metric-label">Pattern Strength:</span>
+                <span class="metric-value medium">78%</span>
+              </div>
+              <div class="metric-item">
+                <span class="metric-label">Risk Assessment:</span>
+                <span class="metric-value low">Low</span>
+              </div>
+            </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Forecast Details Table -->
+      <section class="forecast-table-section">
+        <div class="section-header">
+          <h3><i class="fas fa-table"></i> Forecast Details</h3>
+          <button class="btn secondary" id="export-forecast"><i class="fas fa-file-export"></i> Export Data</button>
+        </div>
+        <div class="table-container">
+          <table class="forecast-table">
+            <thead>
+              <tr>
+                <th>Timestamp</th>
+                <th>Actual Value</th>
+                <th>Forecast Value</th>
+                <th>Confidence</th>
+                <th>Variance</th>
+                <th>Trend</th>
+              </tr>
+            </thead>
+            <tbody id="forecast-table-body">
+              <!-- Data will be populated by JavaScript -->
+            </tbody>
+          </table>
         </div>
       </section>
     </main>
   </div>
 
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    const ctx = document.getElementById('trendChart').getContext('2d');
-    const trendChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: ['Sep 7','Sep 8','Sep 9','Sep 10','Sep 11','Sep 12','Sep 13'],
-        datasets: [
-          {
-            label: 'Metric Value',
-            data: [120, 140, 135, 150, 160, 170, 200],
-            borderColor: '#28a745',
-            fill: false,
-            tension: 0.3
-          },
-          {
-            label: 'AI Forecast',
-            data: [200, 210, 220, 230, 240, 250, 260],
-            borderColor: '#ffc107',
-            borderDash: [5,5],
-            fill: false,
-            tension: 0.3
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        plugins: { legend: { position: 'bottom' } },
-        scales: {
-          x: { title: { display: true, text: 'Date' } },
-          y: { title: { display: true, text: 'Value' } }
-        }
-      }
-    });
-  </script>
+  <script src="js/trends-and-forecasts.js"></script>
 </body>
 </html>
